Simplest possible web server to run this on Heroku

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         4. Open this in your browser, and click "Start publish"
         5. Open this page in other tabs to see them all keep in sync in real time
       */
+
+      /* Not in most circumstances we advise against the use of API keys by clients.
+         However for simplicity for this demo, we are using API keys. See https://goo.gl/bJFBAf */
       const ApiKey = "[INSERT_API_KEY_HERE]";
 
       if (ApiKey.indexOf('INSERT') >= 0) {
