Publisher is using Realtime

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <body>
     <p class="intro">You are viewing the Ably JSON Patch demo. Not sure what this is, <a href="https://github.com/ably/demo-json-patch">find out more</a></p>
     <div class="panel">
-      <h3>REST Publisher Object
+      <h3>Publisher Object
         <a href="#" id="publisher-btn">Start publishing</a>
         <span class="board-size">Max objects: <select id="board-size"></select></span>
       </h3>
