--- a/index.html
+++ b/index.html
@@ -33,13 +33,18 @@
       #publisher-btn { font-size: 12px; padding-left: 1em; font-weight: normal; }
       .board-size, #byte-stats { font-size: 12px; padding-left: 2em; font-weight: normal; }
       .notice { text-align: center; color: red; padding-top: 2em; clear: both; }
-      .intro { text-align: center; font-size: 12px; margin-bottom: 5px; padding-bottom: 5px; border-bottom: 1px solid #CCC; }
+      .intro { text-align: center; font-size: 14px; margin-bottom: 5px; padding: 5px 0 15px; border-bottom: 1px solid #CCC; }
       .ably-logo { float: right; width: 35px; height: 35px; margin-top: 5px;}
+      .github-logo { width: 16px; height: 16px; position: relative; top: 2px; }
+      a { color: #ED760A; text-decoration: none; }
+      a:hover { color: #F9A01B;  }
     </style>
   </head>
 
   <body>
-    <p class="intro">You are viewing the Ably JSON Patch demo. Not sure what this is, <a href="https://github.com/ably/demo-json-patch">find out more</a></p>
+    <p class="intro">
+      You are viewing the Ably JSON Patch demo. Not sure what this is, <a href="https://github.com/ably/demo-json-patch">find out more on Github <img src="/GitHub-Mark-32px.png" alt="Github" class="github-logo"></a>
+    </p>
     <div class="panel">
       <h3>Publisher Object
         <a href="#" id="publisher-btn">Start publishing</a>
