Change files site domain from ably.io to ably.com

--- a/heroku-start.html
+++ b/heroku-start.html
@@ -5,7 +5,7 @@
     </style>
   </head>
   <body>
-    <img src="https://files.ably.io/logo-70x70.png" alt="Ably logo" style="float: right">
+    <img src="https://files.ably.com/logo-70x70.png" alt="Ably logo" style="float: right">
     <h1>Ably JSON Patch Demo</h1>
 
     <p>
