--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
     </script>
 
-    <script src="https://files.ably.io/javascript/json-patch-duplex.min.js"></script>
+    <script src="https://files.ably.com/javascript/json-patch-duplex.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdn.ably.io/lib/ably.min-0.9.js"></script>
 
@@ -57,7 +57,7 @@ Note: If two publishers are publishing simultaneously all bets are off - this wi
       <textarea id="publisher-log" class="log"></textarea>
     </div>
     <div class="panel">
-      <a href="https://www.ably.io"><img src="https://files.ably.io/logo-70x70.png" alt="Ably logo" class="ably-logo"></a>
+      <a href="https://www.ably.io"><img src="https://files.ably.com/logo-70x70.png" alt="Ably logo" class="ably-logo"></a>
       <h3>Client Object</h3>
       <textarea id="client-object" class="object"></textarea>
       <h4>Log</h4>
